--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -14,6 +14,7 @@ Library/Application Support
 Documents
 {{ else }}
 .bashrc
+.config/powershell/Microsoft.PowerShell_profile.ps1
 .digrc
 .tmux.conf
 .vim
