--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -1,4 +1,3 @@
-.oh-my-zsh/**
 .vim/viminfo
 .vim/undo
 
@@ -15,6 +14,7 @@ Documents
 {{ else }}
 .bashrc
 .config/powershell/Microsoft.PowerShell_profile.ps1
+.oh-my-zsh
 .digrc
 .tmux.conf
 .vim
