--- a/home/.chezmoiexternal.yaml
+++ b/home/.chezmoiexternal.yaml
@@ -13,7 +13,7 @@
 .oh-my-zsh/custom/plugins/zsh-autosuggestions:
   type: git-repo
   url: https://github.com/zsh-users/zsh-autosuggestions
-  exact: false
+  exact: true
   stripComponents: 1
   refreshPeriod: 168h
 .oh-my-zsh/custom/themes/powerlevel10k:
