--- a/home/.chezmoiexternal.yaml
+++ b/home/.chezmoiexternal.yaml
@@ -11,16 +11,17 @@
   stripComponents: 1
   refreshPeriod: 168h
 .oh-my-zsh/custom/plugins/zsh-autosuggestions:
-  type: git-repo
-  url: https://github.com/zsh-users/zsh-autosuggestions
+  type: archive
+  url: https://github.com/zsh-users/zsh-autosuggestions/archive/master.tar.gz
   exact: true
   stripComponents: 1
   refreshPeriod: 168h
 .oh-my-zsh/custom/themes/powerlevel10k:
   type: archive
-  url: https://github.com/romkatv/powerlevel10k/archive/v1.15.0.tar.gz
+  url: https://github.com/romkatv/powerlevel10k/archive/master.tar.gz
   exact: true
   stripComponents: 1
+  refreshPeriod: 168h
 .vim/pack/vendor/start/alker0/chezmoi.vim:
   type: git-repo
   url: https://github.com/alker0/chezmoi.vim.git
