--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -127,5 +127,10 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'ofirgall/tmux-window-name'
 
+# Enable mouse functionality
+set -g mouse on
+set -g mouse-select-pane on
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
