--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -3,11 +3,12 @@ prSections:
   filters: is:open author:@me
 - title: Ready for Review
   filters: is:open is:pr team-review-requested:ncr-digital-banking/ncr-dbk-sre archived:false status:success
+  limit: 50
 issuesSections:
 defaults:
   preview:
-    open: true
-    width: 50
+    open: false
+    width: 75
   prsLimit: 20
   issuesLimit: 20
   view: prs
