--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -1,7 +1,7 @@
 .vim/viminfo
 .vim/undo
 .oh-my-zsh/cache/**
-.oh-my-zsh/custom
+.oh-my-zsh/custom/**
 
 {{ if ne .chezmoi.os "darwin" }}
 Library/Application Support
