--- a/home/dot_overcommit.yml
+++ b/home/dot_overcommit.yml
@@ -38,6 +38,10 @@ CommitMsg:
     pattern: '^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test){1}(\([\w\-\.]+\))?(!)?: ([\w ])+([\s\S]*)'
     expected_pattern_message: "<type>(<optional scope>): <subject>"
     sample_message: "feat(shopping cart): add the amazing button"
+  TextWidth:
+    enabled: true
+    max_subject_width: 52
+    max_body_width: 72
 PostCommit:
   GitGuilt:
     enabled: true
