--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -1,7 +1,9 @@
 prSections:
 - title: My Pull Requests
   filters: is:open author:@me
-- title: Ready for Review
+- title: Ready for My Review
+  filters: is:open is:pr user-review-requested:@me archived:false status:success
+- title: Ready for Team Review
   filters: is:open is:pr team-review-requested:ncr-digital-banking/ncr-dbk-sre archived:false status:success
 issuesSections:
 defaults:
