--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -1,11 +1,14 @@
+---
 prSections:
-- title: My Pull Requests
-  filters: is:open author:@me
-- title: Ready for My Review
-  filters: is:open is:pr user-review-requested:@me archived:false status:success
-- title: Ready for Team Review
-  filters: is:open is:pr team-review-requested:ncr-digital-banking/ncr-dbk-sre archived:false status:success
+  - title: My Pull Requests
+    filters: is:open author:@me
+  - title: Ready for My Review
+    filters: is:open is:pr user-review-requested:@me archived:false status:success
+  - title: Ready for Team Review
+    filters: is:open is:pr team-review-requested:ncr-digital-banking/ncr-dbk-sre archived:false status:success
+
 issuesSections:
+
 defaults:
   preview:
     open: false
@@ -13,3 +16,23 @@ defaults:
   prsLimit: 50
   issuesLimit: 20
   view: prs
+
+repoPaths:
+  ncr-digital-banking/*: ~/Documents/60 Professional/61 Projects/61.00 Repositories/*
+
+pager:
+  diff: delta
+
+keybindings:
+  prs:
+    - key: v
+      command: >
+        tmux new-window -c {{.RepoPath}} '
+          gh pr checkout {{.PrNumber}} &&
+          vim -c ":DiffviewOpen master...{{.HeadRefName}}"
+        '
+    - key: c
+      command: >
+        cd {{.RepoPath}} &&
+        code . &&
+        gh pr checkout {{.PrNumber}}
