--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -31,7 +31,7 @@ keybindings:
           gh pr checkout {{.PrNumber}} &&
           vim .
         '
-    - key: c
+    - key: z
       command: >
         cd {{.RepoPath}} &&
         code . &&
