--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -7,7 +7,7 @@ prSections:
   - title: Ready for My Review
     filters: is:open user-review-requested:@me archived:false status:success
   - title: Ready for Team Review
-    filters: is:open team-review-requested:ncr-digital-banking/ncr-dbk-sre archived:false status:success
+    filters: is:open -author:@me team-review-requested:ncr-digital-banking/ncr-dbk-sre archived:false status:success
 
 issuesSections:
 
