--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -12,6 +12,10 @@ prSections:
 issuesSections:
 
 defaults:
+  layouts:
+    prs:
+      base:
+        hidden: false
   preview:
     open: false
     width: 75
