--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -14,6 +14,8 @@ issuesSections:
 defaults:
   layout:
     prs:
+      author:
+        hidden: true
       base:
         hidden: false
   preview:
