--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -45,4 +45,6 @@ keybindings:
 
     - key: t
       command: >
+        cd {{.RepoPath}} &&
+        gh pr checkout {{.PrNumber}}
         gittower {{.RepoPath}} 
