--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -46,5 +46,5 @@ keybindings:
     - key: t
       command: >
         cd {{.RepoPath}} &&
-        gh pr checkout {{.PrNumber}}
+        gh pr checkout {{.PrNumber}} &&
         gittower {{.RepoPath}} 
