--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -9,7 +9,7 @@ prSections:
   - title: Team Review
     filters: is:open -author:@me team-review-requested:ncr-digital-banking/ncr-dbk-sre archived:false status:success
   - title: TF v1 Upgrade
-    filters: is:open is:pr archived:false user:ncr-digital-banking  author:app/renovate "update hashicorp/terraform docker tag to v1 (dev)"
+    filters: is:open is:pr archived:false user:ncr-digital-banking  author:app/renovate "update hashicorp/terraform docker tag to v1 (qal)"
 
 issuesSections:
 
