--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -33,6 +33,11 @@ pager:
 
 keybindings:
   prs:
+    - key: e
+      command: >
+        tmux new-window -c {{.RepoPath}} '
+          gh pr checkout {{.PrNumber}} &&
+        '
     - key: v
       command: >
         tmux new-window -c {{.RepoPath}} '
