--- a/home/private_Library/private_Application Support/gh-dash/config.yml
+++ b/home/private_Library/private_Application Support/gh-dash/config.yml
@@ -9,7 +9,7 @@ prSections:
   - title: Team Review
     filters: is:open -author:@me team-review-requested:ncr-digital-banking/ncr-dbk-sre archived:false status:success
   - title: TF v1 Upgrade
-    filters: is:open is:pr archived:false user:ncr-digital-banking  author:app/renovate "update hashicorp/terraform docker tag to v1 (qal)"
+    filters: is:open is:pr archived:false user:ncr-digital-banking  author:app/renovate "update hashicorp/terraform docker tag to v1"
 
 issuesSections:
 
@@ -37,6 +37,7 @@ keybindings:
       command: >
         tmux new-window -c {{.RepoPath}} '
           gh pr checkout {{.PrNumber}} &&
+          bash --noprofile --norc
         '
     - key: v
       command: >
@@ -54,4 +55,4 @@ keybindings:
       command: >
         cd {{.RepoPath}} &&
         gh pr checkout {{.PrNumber}} &&
-        gittower {{.RepoPath}} 
+        gittower {{.RepoPath}}
