--- a/home/.chezmoiexternal.yaml
+++ b/home/.chezmoiexternal.yaml
@@ -17,10 +17,8 @@
   stripComponents: 1
   refreshPeriod: 168h
 .oh-my-zsh/custom/themes/powerlevel10k:
-  type: archive
-  url: https://github.com/romkatv/powerlevel10k/archive/master.tar.gz
-  exact: true
-  stripComponents: 1
+  type: git-repo
+  url: https://github.com/romkatv/powerlevel10k.git
   refreshPeriod: 168h
 .vim/pack/vendor/start/alker0/chezmoi.vim:
   type: git-repo
