--- a/home/dot_config/gh/private_config.yml
+++ b/home/dot_config/gh/private_config.yml
@@ -11,4 +11,5 @@ aliases:
     stg: pr create --base stg --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
     prd: pr create --base prd --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
     production: pr create --base production --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
+    log: f -l
 pager: delta
