--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -129,7 +129,7 @@ set -g status-right "#[fg=#f38ba8]| #[fg=#a6e3a1] #S #I:#P #[fg=#f38ba8]| #[fg=#
 # # List of plugins
 # set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'ofirgall/tmux-window-name'
+# set -g @plugin 'ofirgall/tmux-window-name'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
