--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -1,7 +1,8 @@
 .vim/viminfo
 .vim/undo
 .oh-my-zsh/cache/**
-.oh-my-zsh/custom/**
+.oh-my-zsh/custom/themes/**
+.oh-my-zsh/custom/plugins/**
 
 {{ if ne .chezmoi.os "darwin" }}
 Library/Application Support
