--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -1,8 +1,11 @@
 .vim/viminfo
 .vim/undo
-.oh-my-zsh/cache/**
-.oh-my-zsh/custom/themes/**
-.oh-my-zsh/custom/plugins/**
+
+# waiting for chezmoi to leverage .gitignore from archives:
+# https://github.com/twpayne/chezmoi/issues/1421#issuecomment-964473844
+.oh-my-zsh/cache
+.oh-my-zsh/custom/themes
+.oh-my-zsh/custom/plugins
 
 {{ if ne .chezmoi.os "darwin" }}
 Library/Application Support
