--- a/home/dot_config/gh/private_config.yml
+++ b/home/dot_config/gh/private_config.yml
@@ -4,12 +4,13 @@ git_protocol: https
 editor:
 # Aliases allow you to create nicknames for gh commands
 aliases:
-  co: '!id="$(gh pr list -L100 | fzf | cut -f1)"; [ -n "$id" ] && gh pr checkout "$id"'
-  dev: pr create --base dev --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
-  qal: pr create --base qal --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
-  pte: pr create --base pte --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
-  stg: pr create --base stg --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
-  prd: pr create --base prd --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
-  production: pr create --base production --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
-  log: f -l
+    co: '!id="$(gh pr list -L100 | fzf | cut -f1)"; [ -n "$id" ] && gh pr checkout "$id"'
+    dev: pr create --base dev --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
+    qal: pr create --base qal --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
+    pte: pr create --base pte --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
+    stg: pr create --base stg --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
+    prd: pr create --base prd --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
+    production: pr create --base production --assignee @me --reviewer ncr-digitial-banking/ncr-dbk-sre
+    log: f -l
 pager: delta
+version: "1"
