--- a/home/.chezmoiexternal.yaml
+++ b/home/.chezmoiexternal.yaml
@@ -140,6 +140,10 @@
   type: git-repo
   url: https://github.com/fatih/vim-go.git
   refreshPeriod: 168h
+.vim/pack/plugins/opt/chezmoi.vim:
+  type: git-repo
+  url: https://github.com/alker0/chezmoi.vim
+  refreshPeriod: 168h
 .tmux/plugins/tpm:
   type: git-repo
   url: https://github.com/tmux-plugins/tpm
