Update home/.chezmoidata/packages.yaml Add home/.grc/conf.gotest Add home/.grc/grc.conf Update home/.zshrc

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -46,6 +46,7 @@ packages:
       - "go"
       - "golangci-lint"
       - "graphviz"
+      - "grc"
       - "grep"
       - "helm"
       - "highlight"
