Update home/.chezmoidata/packages.yaml Update home/.zshrc Add home/.Binfile

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -30,8 +30,6 @@ packages:
       - "freetds"
       - "fzf"
       - "gdu"
-      - "gem-colorls"
-      - "gem-marked-conductor"
       - "gh"
       - "ghostscript"
       - "git-delta"
@@ -61,6 +59,7 @@ packages:
       - "less"
       - "lesspipe"
       - "libmagic"
+      - "libyaml"
       - "lnav"
       - "minikube"
       - "multimarkdown"
@@ -68,7 +67,7 @@ packages:
       - "ncdu"
       - "nmap"
       - "node"
-      - "openssl"
+      - "openssl@3"
       - "p7zip"
       - "pandoc"
       - "pinentry-mac"
@@ -76,10 +75,13 @@ packages:
       - "pre-commit"
       - "pygments"
       - "python@3.12"
+      - "readline"
       - "rbenv"
+      - "rbenv-gemset"
+      - "rbenv-vars"
       - "rename"
       - "ruby-build"
-      - "ruby"
+      - "rust"
       - "sipcalc"
       - "source-highlight"
       - "speedtest-cli"
@@ -92,7 +94,6 @@ packages:
       - "tfupdate"
       - "the_silver_searcher"
       - "tmux"
-      - "tmuxinator"
       - "trash"
       - "tree"
       - "ttscoff/thelab/gather-cli"
