Update home/.chezmoidata/packages.yaml Remove home/.jira.d/config.yml Update home/.zshrc Update home/.Brewfile

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -115,6 +115,7 @@ packages:
       - "alfred"
       - "arc"
       - "beyond-compare"
+      - "bunch"
       - "caldigit-docking-utility"
       - "caldigit-thunderbolt-charging"
       - "camo-studio"
