linux setup revamp

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -143,6 +143,7 @@ packages:
       - "microsoft-auto-update"
       - "microsoft-edge"
       - "microsoft-teams"
+      - "moom"
       - "obsidian"
       - "postman"
       - "powershell"
@@ -158,3 +159,12 @@ packages:
       - "transmit"
       - "visual-studio-code"
       - "zoom"
+  linux:
+    - "curl"
+    - "direnv"
+    - "neofetch"
+    - "rbenv"
+    - "tmux"
+    - "vim"
+    - "wget"
+    - "zsh"
