--- a/home/.chezmoiexternal.yaml
+++ b/home/.chezmoiexternal.yaml
@@ -1,4 +1,8 @@
 {{- /* "chezmoi" is present as work around for https://github.com/twpayne/chezmoi/discussions/1724 */ -}}
+
+
+{{ if  (eq .chezmoi.os "linux" "darwin")  -}}
+
 {{- $cache := dict "chezmoi" .chezmoi -}}
 
 {{- template "read-versions-and-revisions-cache" $cache -}}
@@ -173,3 +177,5 @@
   type: file
   url: https://github.com/romkatv/powerlevel10k-media/raw/master/MesloLGS NF Bold Italic.ttf
   refreshPeriod: 168h
+
+{{- end -}}
