chore: more windows testing and fixing

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -177,3 +177,4 @@ packages:
       - "Microsoft.WindowsTerminal"
       - "Microsoft.VisualStudioCode"
       - "Microsoft.PowerShell"
+      - "JanDeDobbeleer.OhMyPosh"
