--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -109,6 +109,7 @@ packages:
       - "zsh-completions"
       - "zsh-syntax-highlighting"
       - "zsh"
+      - "jandedobbeleer/oh-my-posh/oh-my-posh"
     casks:
       - "1password-cli"
       - "airbuddy"
