--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -171,7 +171,7 @@ packages:
       - "wget"
       - "zsh"
     snaps:
-      - "code"
+      # - "code" # Not available on arm platforms
   windows:
     winget:
       - "Microsoft.PowerToys"
