--- a/home/dot_tmux.conf
+++ b/home/dot_tmux.conf
@@ -138,6 +138,10 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 # Enable mouse functionality
 set -g mouse on
 
+# Fix scrolling on selection in iTerm2
+unbind -T copy-mode MouseDragEnd1Pane
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
 
