--- a/home/dot_grc/grc.conf
+++ b/home/dot_grc/grc.conf
@@ -1,3 +1,11 @@
 # Go
 ^([/\w\.]+\/)?go test\b
 conf.gotest
+
+# Terraform
+^([/\w\.]+\/)?terraform\b
+conf.terraform
+
+# Terragrunt
+^([/\w\.]+\/)?terragrunt\b
+conf.terraform
