Update home/.chezmoidata/packages.yaml Update home/.chezmoiexternal.yaml Update home/.zsh_aliases Update home/.zshrc Update home/.Brewfile

--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -69,6 +69,7 @@ packages:
       - "ncdu"
       - "nmap"
       - "node"
+      - "nvm"
       - "openssl@3"
       - "p7zip"
       - "pandoc"
@@ -101,6 +102,7 @@ packages:
       - "trash"
       - "tree"
       - "ttscoff/thelab/gather-cli"
+      - "viddy"
       - "vim"
       - "virtualenv"
       - "warrensbox/tap/tfswitch"
@@ -109,6 +111,7 @@ packages:
       - "whois"
       - "wifi-password"
       - "yamllint"
+      - "yarn"
       - "zsh-autosuggestions"
       - "zsh-completions"
       - "zsh-syntax-highlighting"
@@ -124,7 +127,6 @@ packages:
       - "caldigit-docking-utility"
       - "caldigit-thunderbolt-charging"
       - "camo-studio"
-      - "cheatsheet"
       - "dash"
       - "devonthink"
       - "docker"
