--- a/home/.chezmoiexternal.yaml
+++ b/home/.chezmoiexternal.yaml
@@ -148,10 +148,10 @@
   type: git-repo
   url: https://github.com/alker0/chezmoi.vim
   refreshPeriod: 168h
-.tmux/plugins/tpm:
-  type: git-repo
-  url: https://github.com/tmux-plugins/tpm
-  refreshPeriod: 168h
+# .tmux/plugins/tpm:
+#   type: git-repo
+#   url: https://github.com/tmux-plugins/tpm
+#   refreshPeriod: 168h
 
 
 {{-   $fontDir := "" }}
