--- a/home/dot_grc/grc.conf
+++ b/home/dot_grc/grc.conf
@@ -9,3 +9,7 @@ conf.terraform
 # Terragrunt
 ^([/\w\.]+\/)?terragrunt\b
 conf.terraform
+
+# Terragrunt
+^([/\w\.]+\/)?python3\b
+conf.python-logging
