--- a/home/.chezmoidata/packages.yaml
+++ b/home/.chezmoidata/packages.yaml
@@ -30,6 +30,7 @@ packages:
       - "findutils"
       - "freetds"
       - "fzf"
+      - "gcc"
       - "gdu"
       - "gh"
       - "ghostscript"
@@ -40,7 +41,6 @@ packages:
       - "github-keygen"
       - "gitleaks"
       - "glow"
-      - "gmp"
       - "gnupg"
       - "go"
       - "golangci-lint"
@@ -59,8 +59,6 @@ packages:
       - "kubernetes-cli"
       - "less"
       - "lesspipe"
-      - "libmagic"
-      - "libyaml"
       - "lnav"
       - "lsd"
       - "minikube"
@@ -77,7 +75,6 @@ packages:
       - "pipx"
       - "pre-commit"
       - "pygments"
-      - "python@3.12"
       - "readline"
       - "rbenv"
       - "rbenv-gemset"
@@ -95,8 +92,6 @@ packages:
       - "terragrunt"
       - "tflint"
       - "tldr"
-      - "tfsec"
-      - "tfupdate"
       - "the_silver_searcher"
       - "tmux"
       - "trash"
@@ -112,12 +107,14 @@ packages:
       - "wifi-password"
       - "yamllint"
       - "yarn"
+      - "yubikey-agent"
       - "zsh-autosuggestions"
       - "zsh-completions"
       - "zsh-syntax-highlighting"
       - "zsh"
       - "jandedobbeleer/oh-my-posh/oh-my-posh"
     casks:
+      - "1password"
       - "1password-cli"
       - "airbuddy"
       - "alfred"
@@ -165,6 +162,8 @@ packages:
       - "tower"
       - "transmit"
       - "visual-studio-code"
+      - "yubico-authenticator"
+      - "yubico-yubikey-manager"
       - "zoom"
   linux:
     packages:
